--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,6 +2,8 @@
 layout: default
 hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
 hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
+hero_video_portrait_poster: "/assets/images/hero_vid_portrait.jpg"
+hero_video_landscape_poster: "/assets/images/hero_vid_landscape.jpg"
 hero_video_title: Pricing
 hero_video_description: Find the right plan for you.
 section_title: UBQFIT Privacy Policy
