--- a/pricing.html
+++ b/pricing.html
@@ -2,6 +2,8 @@
 layout: default
 hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
 hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
+hero_video_portrait_poster: "/assets/images/hero_vid_portrait.jpg"
+hero_video_landscape_poster: "/assets/images/hero_vid_landscape.jpg"
 hero_video_title: Pricing
 hero_video_description: Find the right plan for you.
 section_two_title: What are you waiting for?
@@ -44,14 +46,14 @@ section_two_description: "<p>It’s free to watch. No commitments. </p><p>Choose
                 <div class="width-100 home-banner heroContainer">
                   <div class="width-100">
                     <video class="heroVideo portrait"
-                      poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
+                      poster="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait_poster }}" muted playsinline preload
                       autoplay loop>
                       <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
                         type="video/mp4" class="portrait">
                       Your browser does not support the video tag.
                     </video>
                     <video class="heroVideo landscape"
-                      poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
+                      poster="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape_poster }}" muted playsinline preload
                       autoplay loop>
                       <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
                         type="video/mp4" class="landscape">
