Updated terms & conditions href="tel:" code.

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -80,7 +80,7 @@ section_description: '<p><strong>Overview</strong></p><p>Welcome to <strong>UB<e
   costs and attorney’s fees incurred by us in connection with the written notification
   and allegation of copyright</p><p>The designated Copyright Agent for the Company
   is:</p><p>Rick Chapo, <a href="http://dmcaagentservice.com/">DMCAAgentService.com</a><br>P.O.
-  Box 373<br>Pine Valley, California 91962<br>Phone: <a href="tell:8008047260">(800)
+  Box 373<br>Pine Valley, California 91962<br>Phone: <a href="tel:8008047260">(800)
   804-7260</a><br>Email: <a href="mailto:complaint@dmcaagentservice.com">complaint@dmcaagentservice.com</a></p><p><strong>Our
   Business Address:</strong><br><strong>UB<em>Q</em>FIT</strong> Inc<br>980 North
   Federal Highway<br>Boca Raton, FL 33432<br><a href="https://ubqfit.com/">UBQFIT.com</a>
